add project details and photos

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <div class="hero-text">
           <p>
-            Hi! I'm Afsana, a Computer Science graduate from United International University, currently working as a Data Engineer at <a href="https://www.linkedin.com/company/aboitiz-data-innovation/posts/?feedView=all"> Aboiti Data Innovation </a> . I build scalable data pipelines that support complex data systems and enable machine learning models for forecasting business-critical insights.
+            Hi! I'm Afsana, a Computer Science graduate from United International University, currently working as a Data Engineer at <a href="https://www.linkedin.com/company/aboitiz-data-innovation/posts/?feedView=all"> Aboitiz Data Innovation </a> . I build scalable data pipelines that support complex data systems and enable machine learning models for forecasting business-critical insights.
 
           </p>
 
@@ -159,17 +159,96 @@
 
       <section class="section" id="projects">
         <heading>Projects</heading>
-        <div class="project-list">
-          <p>• Add your project details here...</p>
-        </div>
+        <div class="pub-card">
+            <!-- <img src="images/Research_Methodology.png" alt="Data Locality on the Performance of Cluster-Based Under-Sampling" class="pub-image"> -->
+
+            <div class="pub-info">
+              <p  class="pub-title">
+               Renaissance
+              </p>
+
+              <p class="pub-meta">Industry project at Aboitiz Data Innovation, 2024</p>
+
+              <ul class="pub-points">
+                <li>For the past year, I have been working on the Renaissance project to build and optimize data pipelines for machine learning models.</li>
+                <ul>
+                  <li>Developed end‑to‑end data pipelines for data ingestion, transformation, and orchestration using technologies such as Spark, Databricks, and Airflow.</li>
+                  <li>Enhanced forecasting accuracy by implementing real‑time data integration.</li>
+                  <li>Reducing processing latency through the use of cloud‑based AWS Lambda functions</li>
+                  <li>Automate complex data system</li>
+                </ul>
+
+              </ul>
+            </div>
+          </div>
+
+          <div class="pub-card">
+
+            <div class="pub-info">
+              <p  class="pub-title">
+               Fuel Management System (FMT)
+              </p>
+
+              <p class="pub-meta">Industry project at Aboitiz Data Innovation, 2025</p>
+
+              <ul class="pub-points">
+                <li>Besides Renaissance, I am leading the FMT project on the Data Engineering side.</li>
+                <ul>
+                  <li>Developed a robust data pipeline to automate the Philippines’ fuel pricing management system.</li>
+                  <li>Extracted and integrated data from different sources using Python and Spark, and transformed them for the data science team.</li>
+                  <li>Automated key formulas and pricing calculations within the pipeline.</li>
+                </ul>
+
+              </ul>
+            </div>
+          </div>
+
+          <div class="pub-card">
+            <img src="images/Airin_rover_photo.jpg" alt="Mars_rover_2022" class="pub-image">
+
+            <div class="pub-info">
+
+              <p  class="pub-title">
+               Rock Detection Model & Soil testing for in-situ life detection
+              </p>
+
+              <p class="pub-meta">UIU Mars Rover Team (UMRT),(University Rover Challenge), 2022</p>
+
+              <ul class="pub-points">
+                <li>In 2022, I was a part of the Science Team for the UIU Mars Rover team, where we participated in the prestigious University Rover Challenge (URC) in Utah, USA, for the first time. As a member of the science team, my focus areas included: </li>
+                <ul>
+                  <li>Conducting research on soil testing for in-situ life detection on Mars.</li>
+                  <li>Performing over 50 chemical tests to detect vital soil elements like proteins, carbohydrates, and lipids, aiming to find potential signs of life on Mars.</li>
+                  <li> Developing a deep learning model and a specialized rock dataset for rock testing, which detected the presence of algae and fossils, offering potential evidence of life.</li>
+                </ul>
+
+              </ul>
+
+              <div class="pub-links">
+                <a href="https://www.youtube.com/watch?v=elEY-_VirTA">Video</a>
+              </div>
+            </div>
+          </div>
+
+
       </section>
 
       <!-- Awards & Achievements Section -->
       <section class="section" id="awards">
         <heading>Awards & Achievements</heading>
-        <div class="award-list">
-          <p>• Add your awards here...</p>
-        </div>
+        <div class="pub-card">
+            <img src="images/UIU_logo.jpg" alt="uiu_scholarship" class="pub-image">
+
+            <div class="pub-info">
+
+              <p  class="pub-title">
+               100% Scholarship and 50% Waiver
+              </p>
+
+              <p class="pub-meta">United International University, 2019-2023</p>
+
+            </div>
+          </div>
       </section>
     </main>
   </div>
