update project and award section

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <span class="sub-nav">
           <a href="#projects">Projects</a>
           <a href="#awards">Awards & Achievements</a>
-          <a href="#experience">Experience</a>
+          <!-- <a href="#experience">Experience</a> -->
         </span>
 
         <div class="pub-list">
@@ -159,49 +159,50 @@
 
       <section class="section" id="projects">
         <heading>Projects</heading>
-        <div class="pub-card">
-            <!-- <img src="images/Research_Methodology.png" alt="Data Locality on the Performance of Cluster-Based Under-Sampling" class="pub-image"> -->
-
-            <div class="pub-info">
-              <p  class="pub-title">
-               Renaissance
-              </p>
-
-              <p class="pub-meta">Industry project at Aboitiz Data Innovation, 2024</p>
-
-              <ul class="pub-points">
-                <li>For the past year, I have been working on the Renaissance project to build and optimize data pipelines for machine learning models.</li>
-                <ul>
-                  <li>Developed end‑to‑end data pipelines for data ingestion, transformation, and orchestration using technologies such as Spark, Databricks, and Airflow.</li>
-                  <li>Enhanced forecasting accuracy by implementing real‑time data integration.</li>
-                  <li>Reducing processing latency through the use of cloud‑based AWS Lambda functions</li>
-                  <li>Automate complex data system</li>
-                </ul>
-
-              </ul>
-            </div>
-          </div>
-
+        <div class="pub-list">
           <div class="pub-card">
+              <!-- <img src="images/Research_Methodology.png" alt="Data Locality on the Performance of Cluster-Based Under-Sampling" class="pub-image"> -->
 
-            <div class="pub-info">
-              <p  class="pub-title">
-               Fuel Management System (FMT)
-              </p>
+              <div class="pub-info">
+                <p  class="pub-title">
+                Renaissance
+                </p>
 
-              <p class="pub-meta">Industry project at Aboitiz Data Innovation, 2025</p>
+                <p class="pub-meta">Industry project at Aboitiz Data Innovation, 2024</p>
 
-              <ul class="pub-points">
-                <li>Besides Renaissance, I am leading the FMT project on the Data Engineering side.</li>
-                <ul>
-                  <li>Developed a robust data pipeline to automate the Philippines’ fuel pricing management system.</li>
-                  <li>Extracted and integrated data from different sources using Python and Spark, and transformed them for the data science team.</li>
-                  <li>Automated key formulas and pricing calculations within the pipeline.</li>
+                <ul class="pub-authors">
+                  <li>For the past year, I have been working on the Renaissance project to build and optimize data pipelines for machine learning models.</li>
+                  <ul>
+                    <li>Developed end‑to‑end data pipelines for data ingestion, transformation, and orchestration using technologies such as Spark, Databricks, and Airflow.</li>
+                    <li>Enhanced forecasting accuracy by implementing real‑time data integration.</li>
+                    <li>Reducing processing latency through the use of cloud‑based AWS Lambda functions</li>
+                    <li>Automate complex data system</li>
+                  </ul>
+
                 </ul>
-
-              </ul>
+              </div>
             </div>
-          </div>
+
+            <div class="pub-card">
+
+              <div class="pub-info">
+                <p  class="pub-title">
+                Fuel Management System (FMT)
+                </p>
+
+                <p class="pub-meta">Industry project at Aboitiz Data Innovation, 2025</p>
+
+                <ul class="pub-authors">
+                  <li>Besides Renaissance, I am leading the FMT project on the Data Engineering side.</li>
+                  <ul>
+                    <li>Developed a robust data pipeline to automate the Philippines’ fuel pricing management system.</li>
+                    <li>Extracted and integrated data from different sources using Python and Spark, and transformed them for the data science team.</li>
+                    <li>Automated key formulas and pricing calculations within the pipeline.</li>
+                  </ul>
+
+                </ul>
+              </div>
+            </div>
 
           <div class="pub-card">
             <img src="images/Airin_rover_photo.jpg" alt="Mars_rover_2022" class="pub-image">
@@ -214,7 +215,7 @@
 
               <p class="pub-meta">UIU Mars Rover Team (UMRT),(University Rover Challenge), 2022</p>
 
-              <ul class="pub-points">
+              <ul class="pub-authors">
                 <li>In 2022, I was a part of the Science Team for the UIU Mars Rover team, where we participated in the prestigious University Rover Challenge (URC) in Utah, USA, for the first time. As a member of the science team, my focus areas included: </li>
                 <ul>
                   <li>Conducting research on soil testing for in-situ life detection on Mars.</li>
@@ -230,25 +231,105 @@
             </div>
           </div>
 
-
+        </div>
       </section>
 
       <!-- Awards & Achievements Section -->
       <section class="section" id="awards">
         <heading>Awards & Achievements</heading>
-        <div class="pub-card">
-            <img src="images/UIU_logo.jpg" alt="uiu_scholarship" class="pub-image">
+        <div class="pub-list">
+            <div class="pub-card">
+              <img src="images/UIU_logo.jpg" alt="uiu_scholarship" class="pub-image">
 
-            <div class="pub-info">
+                <div class="pub-info">
 
-              <p  class="pub-title">
-               100% Scholarship and 50% Waiver
-              </p>
+                  <p  class="pub-title">
+                  100% Scholarship and 50% Waiver
+                  </p>
 
-              <p class="pub-meta">United International University, 2019-2023</p>
+                  <p class="pub-meta">United International University, 2019-2023</p>
+                  <p class="pub-authors">Awared 100% Scholarship Award (Summer 2019) and 50% Tuition Waiver for the remaining
+                    semesters </p>
 
+                </div>
             </div>
-          </div>
+
+            <div class="pub-card">
+              <img src="images/University_rover_challenge_certificate.jpg" alt="uiu_mars_rover_award" class="pub-image">
+
+                <div class="pub-info">
+
+                  <p  class="pub-title">
+                  1st place in Asia and 13th worldwide
+                  </p>
+
+                  <p class="pub-meta">University Rover Challenge, 2022</p>
+                  <p class="pub-authors">
+                    As a member of the UIU Mars Rover Team, secured 1st place in Asia and 13th worldwide among 36
+                    international universities in the University Rover Challenge (URC) held in Utah, USA in 2022. This
+                    achievement marked the highest position ever attained by a team from Bangladesh in the history of
+                    URC. </p>
+                  </p>
+
+                </div>
+            </div>
+
+            <div class="pub-card">
+              <img src="images/cse_project_show.jpg" alt="CSE_project_show" class="pub-image">
+
+                <div class="pub-info">
+
+                  <p  class="pub-title">
+                  1st Runner-Up - CSE Project Showcase
+                  </p>
+
+                  <p class="pub-meta">Intra‑university project show competition, (Fall 2022)</p>
+                  <p class="pub-authors">
+                    Represented our project <strong>UIU Club Management System</strong> to manage university club membership, event scheduling, and activity tracking, enhancing administravtive efficiency and student engagement.</p>
+                  </p>
+                  <div class="pub-links">
+                    <a href="https://github.com/rezabtuhin/uiucms">Code</a>
+                  </div>
+
+                </div>
+            </div>
+
+            <div class="pub-card">
+              <img src="images/Debate_tournament_cropped.jpeg" alt="Debate_tournament" class="pub-image">
+
+                <div class="pub-info">
+
+                  <p  class="pub-title">
+                  Debater of the tournament (English Debate)
+                  </p>
+
+                  <p class="pub-meta">10th Intra‑university Debate Competition, 2019</p>
+                  <p class="pub-authors">
+                    Achieved the Debater of the Tournament award for best individual performance and successfully led our team to a 1st Runner-Up position.</p>
+                  </p>
+
+                </div>
+            </div>
+
+            <div class="pub-card">
+              <!-- <img src="images/Debate_tournament_cropped.jpeg" alt="Debate_tournament" class="pub-image"> -->
+
+                <div class="pub-info">
+
+                  <p  class="pub-title">
+                  Higher Secondary Board Scholarship
+                  </p>
+
+                  <p class="pub-meta">Bangladesh Dhaka Education Board, 2018-2022</p>
+                  <p class="pub-authors">
+                    Achieved 4‑year Board Scholarship for outstanding performance in the Higher Secondary Certificate
+                    (HSC) Examination</p>
+                  </p>
+
+                </div>
+            </div>
+
+        </div>
       </section>
     </main>
   </div>
